# name: TestClass.test_name
  'this is in a test class'
---
# name: test_bool[False]
  False
---
# name: test_bool[True]
  True
---
# name: test_cycle[cyclic0]
  <class 'list'> [
    1,
    2,
    3,
    ...,
  ]
---
# name: test_cycle[cyclic1]
  <class 'dict'> {
    'a': 1,
    'b': 2,
    'c': 3,
    'd': ...,
  }
---
# name: test_dict[actual0]
  <class 'dict'> {
    'a': <class 'dict'> {
      'e': False,
    },
    'b': True,
    'c': 'Some text.',
    'd': <class 'list'> [
      '1',
      2,
    ],
  }
---
# name: test_dict[actual1]
  <class 'dict'> {
    'a': <class 'dict'> {
      'e': False,
    },
    'b': True,
    'c': 'Some ttext.',
    'd': <class 'list'> [
      '1',
      2,
    ],
  }
---
# name: test_empty_snapshot
  None
---
# name: test_empty_snapshot.1
  ''
---
# name: test_list
  <class 'list'> [
    1,
    2,
    'string',
    <class 'dict'> {
      'key': 'value',
    },
  ]
---
# name: test_multiple_snapshots
  'First.'
---
# name: test_multiple_snapshots.1
  'Second.'
---
# name: test_multiple_snapshots.2
  'Third.'
---
# name: test_numbers
  3.5
---
# name: test_numbers.1
  7
---
# name: test_numbers.2
  0.3333333333333333
---
# name: test_set
  <class 'set'> {
    'a',
    'is',
    'set',
    'this',
  }
---
# name: test_set.1
  <class 'set'> {
    <class 'frozenset'> {
      '1',
      '2',
    },
    'contains',
    'frozen',
  }
---
# name: test_string[- singleline]
  '- singleline'
---
# name: test_string[Backslash \\u U]
  'Backslash \\u U'
---
# name: test_string[Escaped \\n]
  'Escaped \\n'
---
# name: test_string[Raw string]
  'Raw string'
---
# name: test_string[\U0001f95e\U0001f40d\U0001f36f]
  '🥞🐍🍯'
---
# name: test_string[]
  ''
---
# name: test_string[b'Byte string']
  b'Byte string'
---
# name: test_string[multi-line|line 2|  line 3]
  '
  multi-line
  line 2
    line 3
  '
---
# name: test_string[multi-line|line 2|line 3]
  '
  multi-line
  line 2
  line 3
  '
---
# name: test_string[singleline:]
  'singleline:'
---
# name: test_string[string with 'quotes']
  "string with 'quotes'"
---
# name: test_tuple
  <class 'tuple'> (
    'this',
    'is',
    <class 'tuple'> (
      'a',
      'tuple',
    ),
  )
---
# name: test_tuple.1
  <class 'ExampleTuple'> (
    'this',
    'is',
    'a',
    <class 'set'> {
      'named',
      'tuple',
    },
  )
---
